# my-eagle-mpc

./: CMakeLists.txt  README.md
bindings/python/eagle_mpc/: stage.hpp
bindings/python/eagle_mpc/utils/: simulator.py  visualizer.py
examples/python/: mpc.py  mpc_catch_nc.ipynb  mpc_catch_nc_with_load.ipynb  mpc_hover.ipynb  trajectory.py
include/eagle_mpc/: mpc-base.hpp  stage.hpp
include/eagle_mpc/factory/: cost.hpp  int-action.hpp
include/eagle_mpc/mpc-controllers/: rail-mpc.hpp  weighted-mpc.hpp
src/: mpc-base.cpp  stage.cpp  trajectory.cpp
src/factory/: cost.cpp
src/mpc-controllers/: carrot-mpc.cpp  weighted-mpc.cpp
yaml/hexacopter370/trajectories/: displacement.yaml  hover.yaml  passthrough.yaml
yaml/hexacopter370_flying_arm_3/trajectories/: displacement.yaml  eagle_catch.yaml  eagle_catch_nc.yaml  hover.yaml  monkey_bar.yaml  move_arm.yaml
yaml/hexacopter680_flying_arm_2/trajectories/: hover.yaml
yaml/hextilt/trajectories/: hover.yaml
yaml/hextilt_flying_arm_5/trajectories/: push_slide.yaml
yaml/iris/trajectories/: hover.yaml  loop.yaml  passthrough.yaml
yaml/iris_px4/trajectories/: displacement.yaml  hover.yaml
